Exercise 2 - ssl/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - <host>
    secretName: tls-secret
  rules:
  - host: <host>
    http:
      paths:
      - path: /
        backend:
          serviceName: productpage
          servicePort: 9080
